--- a/pisugar-server/Cargo.toml
+++ b/pisugar-server/Cargo.toml
@@ -46,8 +46,8 @@ assets = [
     ["debian/pisugar-server.service", "lib/systemd/system/", "644"],
     ["debian/config.json", "etc/pisugar-server/", "644"],
     ["debian/_ws.json", "usr/share/pisugar-server/web/", "644"],
-    ["../electron/dist/web/*", "usr/share/pisugar-server/web/", "644"],
-    ["../electron/dist/web/fonts/*", "usr/share/pisugar-server/web/fonts", "644"]
+    #["../electron/dist/web/*", "usr/share/pisugar-server/web/", "644"],
+    #["../electron/dist/web/fonts/*", "usr/share/pisugar-server/web/fonts", "644"]
 ]
 conf-files = [
     "/etc/default/pisugar-server",
